# plug-in

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
encrypt_shellcode/aes256-gcm/: Cargo.toml  README.md
encrypt_shellcode/aes256-gcm/src/: lib.rs
