[package]
name = "aes256-gcm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.120"
aes-gcm = "0.10.3"
rand = "0.8.5"
